Finished up all of the Lectures that I have notes for. Includes tex and images.

--- a/mae281a_lec01.tex
+++ b/mae281a_lec01.tex
@@ -52,11 +52,11 @@ Equilibria: $\text{null}(A)$ or $\text{kernel}(A)$.
 \end{definition}
 
 \section{Multiple Isolated Equilibria}
-In the linear case $\dot{x}=Ax$ we have $\text{null}(A)$ is the equilibria manifold or the coninuum of equilibria. In the nonlinear case $\dot{x}=f(x)$ we find multiple isolated equilibria.
+In the linear case $\dot{x}=Ax$ we have $\text{null}(A)$ is the equilibria manifold or the continuum of equilibria. In the nonlinear case $\dot{x}=f(x)$ we find multiple isolated equilibria.
 \begin{example}
 Let
 $$\dot{x} = x-x^3 = x(1-x^2)$$
-The equilibria are found when $f(x)=0$ which in this case leads to $x=0,\pm1$. Figure \ref{fig:01roots} shows where the equilibria lie on a line and Figure \ref{fig:01traj} shows how the solution depends on the initial conditions. The highlighted initial conditions are when $x_0\gg1$, $x_0\ll1$, $0<x_0<1$ and $-1<x_0<0$. Later in this course we will see that the $\pm1$ equilibria are attracting and the $0$ equilibria is repellant and that attracting equilibria are stable while repellant equilibria are unstable.
+The equilibria are found when $f(x)=0$ which in this case leads to $x=0,\pm1$. Figure \ref{fig:01roots} shows where the equilibria lie on a line and Figure \ref{fig:01traj} shows how the solution depends on the initial conditions. The highlighted initial conditions are when $x_0\gg1$, $x_0\ll1$, $0<x_0<1$ and $-1<x_0<0$. Later in this course we will see that the $\pm1$ equilibria are attracting and the $0$ equilibrium is repellant and that attracting equilibria are stable while repellant equilibria are unstable.
 $\lozenge$
 \end{example}
 
