--- a/mae281a_lec02.tex
+++ b/mae281a_lec02.tex
@@ -77,7 +77,7 @@ which yields the equilibria as
 \section{Qualitative Behavior Near Equilibria}
 This section corresponds to \S2.3 of Khalil. Let
 $$\dot{x} = f(x), \qquad f(p) = 0$$
-so that the point $p$ is an equilibria. We can use a Taylor series expansion about $x=p$ to find
+so that the point $p$ is an equilibrium. We can use a Taylor series expansion about $x=p$ to find
 \begin{align*}
 \dot{x} = \underbrace{f(p)}_{=0} + \underbrace{\left.\frac{\partial f(x)}{\partial x}\right|_{x=p}}_{\text{constant square matrix}} \underbrace{(x-p)}_{y} + \text{H.O.T.}
 \end{align*}
