--- a/mae281a_lec03.tex
+++ b/mae281a_lec03.tex
@@ -30,6 +30,7 @@ When $k=0$ the trajectories are straight because the rate of decay of the expone
 
 \section{Examples of Behavior Near Equilibria}
 \begin{example}
+\label{ex:03pendulum}
 This is Example 2.4 in Khalil and looks at a pendulum with friction. We can use Newton's second law to find the dynamics as
 $$ml\ddot{\theta} + kl\dot{\theta} + mg\sin\theta = 0$$
 The state space variables are angular position and angular velocity, see Figure \ref{fig:03pendulum}, where
