--- a/mae281a_lectures.tex
+++ b/mae281a_lectures.tex
@@ -15,8 +15,8 @@
 \include{mae281a_lec07}
 \include{mae281a_lec08}
 \include{mae281a_lec09}
-% \include{mae281a_lec10}
-% \include{mae281a_lec11}
-% \include{mae281a_lec12}
+\include{mae281a_lec10}
+\include{mae281a_lec11}
+\include{mae281a_lec12}
 
 \end{document}
