Made it so that Figures and Tables will get a prefix of the chapter number: Figure 1 in Lecture 5 is now Figure 5.1.

--- a/preamble.tex
+++ b/preamble.tex
@@ -455,6 +455,8 @@
 % EQUATION NUMBERING AND THEOREM SETUP
 \numberwithin{section}{chapter}
 \numberwithin{equation}{chapter}
+\numberwithin{figure}{chapter}
+\numberwithin{table}{chapter}
 \theoremstyle{plain}
 \newtheorem{theorem}[equation]{Theorem}
 \newtheorem{lemma}[equation]{Lemma}
